# jax-dp-traffic-prediction

./: .gitignore  README.md  pyproject.toml  requirements_colab.txt  run_jax_paper_test_suite.sh
data/: config_check.yaml  config_multidata.yaml  config_realtime.yaml  config_realtime_avg.yaml  config_tlc_nyc_inflow.yaml  config_tlc_nyc_inflow_avg.yaml  config_tlc_nyc_inflow_test_reproducability.yaml  config_tlc_nyc_outflow.yaml  config_tlc_nyc_outflow_avg.yaml
data/bootstrap/: config_addresses_inflow.yaml  config_addresses_outflow.yaml  model_types.yaml  paired_model_inflow.yaml  paired_model_outflow.yaml
data/m_2_3_y_2019_optimals/: config_MA2_I3_optimal_lyft.yaml  config_MA2_O3_optimal_lyft.yaml  config_MA3_S_I41_optimal_lyft.yaml  config_MA3_S_I42_optimal_c10.yaml  config_MA3_S_I42_optimal_c1_50.yaml  config_MA3_S_I42_optimal_c20.yaml  config_MA3_S_I42_optimal_c2_50.yaml  config_MA3_S_I42_optimal_c30.yaml  (+917 more)
data_scripts/: create_full_2019_02_04_paper_files.py
results/: jax_paper_test_metrics_ranked.csv  jax_paper_test_metrics_summary.csv  pytorch_fixed_5epoch_summary.txt  status_2epoch_all_architectures.csv
scripts/: run_pytorch_fixed.py  train_jax_MP0_o.py  train_private.py  train_private_jax_final.py
torch_geometric/: __init__.py  data.py
torch_geometric_temporal/: __init__.py  signal.py
traffic_prediction/: aggregate.py  astgcn_customized.py  astgcn_original.py  block_bootstrap.py  clean.py  datasets.py  dotdict.py  evaluation.py  linear_regression_analysis.py  lr_analysis.py  models.py  run_bootstrap_DEPRECATED.py  utils.py  viz.py
(+212 files in other folders)
