[project]
name = "traffic_prediction"
version = "0.0.1"
requires-python =">=3.8"
authors = [
  {name = "Ali Ghafelebashi", email = "ghafeleb@usc.edu"},
]

[dependencies]
pandas = "1.3.5"
geopandas = "0.12.2"
pyarrow = "11.0.0"
plotly = "5.9.0"
matplotlib = "3.7.2"
nbformat = "5.9.2"
pytorch = "1.13.0"
pytorch-cuda = "11.6"
pyg = "2.3.1"
torch-geometric-temporal = "0.54.0"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build]
include = ["traffic_prediction/*"]

[tool.ruff]
extend-exclude = ["data"]
line-length = 120
fix = true
show-fixes=true
fixable = ["E501"]
ignore-init-module-imports = true
